--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,7 @@ body {
 }
 
 .container {
+  position: relative;
   width: 70%;
   max-width: 1300px;
   margin: 0 auto;
